bluec-tests/tests/valid/types_longlong/multi/return_longlong.c
long long add(int a, int b) {
    return (long long) a + (long long) b;
}