bluec-tests/tests/invalid/types_longlong/var_name_long.c
int main(void) {
    int long long = 5;
    return long long;
}